--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,12 +23,10 @@
     }
 
     .action-area {
+        margin-bottom: 14px;
+
         a.btn {
             margin-right: 10px;
         }
-    }
-
-    .fixed-action-btn {
-        bottom: 110px;
     }
 }
